[package]
name = "foxhole-api"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/bahildebrand/foxhole-api"
homepage = "https://github.com/bahildebrand/foxhole-api"
description = """
A rust wrapper for the Foxhole War API.
"""
keywords = ["foxhole"]
categories = ["api-bindings", "asynchronous"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
thiserror = "1.0.51"

[dev-dependencies]
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }
mockito = "0.30"
